--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 29 15:48:53 CEST 2023
-sdk.dir = /Users/erikringvold/Library/Android/sdk
+#Fri May 19 16:32:16 CEST 2023
+sdk.dir=C\:\\Users\\mohib\\AppData\\Local\\Android\\Sdk
