--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri May 19 16:32:16 CEST 2023
-sdk.dir=C\:\\Users\\mohib\\AppData\\Local\\Android\\Sdk
+#Mon Apr 24 16:48:32 CEST 2023
+sdk.dir=C\:\\Users\\hassa\\AppData\\Local\\Android\\Sdk
