--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,12 @@ android {
 dependencies {
 
 
+    implementation 'androidx.navigation:navigation-testing:2.5.3'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     def nav_version = "2.5.3"
     implementation ("androidx.navigation:navigation-compose:$nav_version")
 
@@ -58,6 +64,7 @@ dependencies {
     implementation("io.ktor:ktor-server-netty:2.2.4")
 
     implementation("io.ktor:ktor-client-okhttp:$ktor_version")
+
 
     implementation("io.ktor:ktor-client-content-negotiation:$ktor_version")
     implementation("io.ktor:ktor-serialization-kotlinx-json:$ktor_version")
